# interchange-schemas

./: Makefile  README.md  pyproject.toml  spots-checkins-api-documentation.md
digitalcrust/interchange_schemas/: README.md  __init__.py  conftest.py  converter.py  converter_results.txt  field_site.py  test_converter.py
digitalcrust/test-data/: field-site.json
digitalcrust/test-data/rockd/: checkin-26692.json
digitalcrust/test-data/strabospot/: field_project.json  gentile-wash-data.json
field_site_schemas/: __init__.py
output/: field-site.json
scripts/: download-fixtures.sh  generate-schema.py
test-data/rockd/: checkin-26692.json
test-data/strabospot/: complete-spot.json
