[project]
name = "digitalcrust.interchange-schemas"
version = "0.1.0"
description = "Interchange schemas for field sites between Macrostrat and StraboSpot"
authors = [
    {name = "Daven Quinn",email = "code@davenquinn.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "erdantic (>=1.1.0.post1,<2.0.0)",
    "geojson-pydantic (>=1.2.0,<2.0.0)"
]

[tool.poetry]

packages = [
    {include = "digitalcrust"}
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
