[tool.poetry]
name = "digitalcrust.interchange-schemas"
version = "0.1.0"
description = "Interchange schemas for field sites between Macrostrat and StraboSpot"
authors = ["Daven Quinn"]
license = "MIT"
readme = "README.md"
packages = [{ include = "digitalcrust" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.11"
geojson-pydantic = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
